# lightweight-replace-engine

./: CMakeLists.txt  GETTING_STARTED.txt  ProjectHome.md  README.txt
CMakeModules/: ModuleInstall.cmake
applications/lre/: CMakeLists.txt  main.cpp
data/: CMakeLists.txt
data/data-singlefile/: data.lre
data/sub/: docB.csv.in
examples/: CMakeLists.txt
examples/lreExternalData/: CMakeLists.txt  main.cpp
examples/lreInternalData/: CMakeLists.txt  cmake_install.cmake  main.cpp
src/lre/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Component.cpp  Component.h  ConsoleColor.cpp  Export.h  FileUtil.cpp  FileUtil.h  FileUtils.cpp  FileUtils.h  ReplaceEngine.cpp  ReplaceEngine.h  Set.cpp  Set.h  Settings.cpp
tags/LRE-0.1.0/: README.txt
tags/LRE-0.1.0/CMakeModules/: OsgMacroUtils.cmake
tags/LRE-0.1.0/data/: doc1.csv.in
tags/LRE-0.1.0/src/lre/: Component.h  Set.h
tags/LRE-0.3.0/: CMakeLists.txt  README.txt
tags/LRE-0.3.0/applications/lre/: CMakeLists.txt  main.cpp
tags/LRE-0.3.0/data/: CMakeLists.txt
tags/LRE-0.3.0/examples/lreExternalData/: CMakeLists.txt  main.cpp
tags/LRE-0.3.0/examples/lreInternalData/: main.cpp
tags/LRE-0.3.0/src/: CMakeLists.txt
tags/LRE-0.3.0/src/lre/: ArgumentParser.h  Component.h  FileUtil.h  ReplaceEngine.cpp  Set.cpp  Set.h
tags/LRE-0.3.0/test/src/lre/: SetTest.cpp  unitTest_main.cpp
tags/LRE-0.5.0/: CMakeLists.txt  README.txt
tags/LRE-0.5.0/test/src/lre/: CommandLineTest.cpp  ComponentTest.cpp
tags/LRE-0.5.1/: README.txt
tags/LRE-0.5.1/applications/: CMakeLists.txt
tags/LRE-0.5.1/data/: lre.bat
tags/LRE-0.5.1/examples/lreExternalData/: CMakeLists.txt  main.cpp
tags/LRE-0.5.1/src/lre/: CMakeLists.txt  Component.cpp  ReplaceEngine.h
tags/LRE-0.5.1/test/src/lre/: CMakeLists.txt
tags/LRE-0.7.0/: README.txt
tags/LRE-0.7.0/data/data-multifile/: commands.lre
tags/LRE-0.7.0/examples/lreExternalData/: main.cpp
tags/LRE-0.7.0/src/lre/: CMakeLists.txt  Component.cpp  FileUtils.h  ReplaceEngine.cpp  ReplaceEngine.h  Settings.h
tags/LRE-0.9.0/: GETTING_STARTED.txt
tags/LRE-0.9.0/applications/lre/: CMakeLists.txt
tags/LRE-0.9.0/data/sub/: CMakeLists.txt
tags/LRE-0.9.0/examples/lreInternalData/: main.cpp
tags/LRE-0.9.0/src/lre/: ArgumentParser.h  Component.cpp  ReplaceEngine.h  Settings.cpp
tags/LRE-0.9.0/test/src/: CMakeLists.txt
tags/LRE-0.9.0/test/src/lre/: CMakeLists.txt  FileIOTest.cpp
tags/LRE-1.0.0/: CMakeLists.txt  README.txt
tags/LRE-1.0.0/data/: CMakeLists.txt
tags/LRE-1.0.0/data/data-multifile/: users.lre
tags/LRE-1.0.0/data/data-singlefile/: CMakeLists.txt
tags/LRE-1.0.0/examples/lreInternalData/: CMakeLists.txt
tags/LRE-1.0.0/src/lre/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Set.cpp  Settings.cpp  Settings.h
tags/LRE-1.1.0/: README.txt
tags/LRE-1.1.0/data/: doc_with_errors2.csv.in2
tags/LRE-1.1.0/examples/lreInternalData/: main.cpp
tags/LRE-1.1.0/test/src/lre/: ComponentTest.cpp
tags/LRE-1.2.0/: GETTING_STARTED.txt
tags/LRE-1.2.0/src/lre/: ConsoleColor.h  FileUtils.h  Settings.cpp
tags/LRE-1.2.0/test/: CMakeLists.txt
tags/LRE-1.2.0/test/src/lre/: FileUtilsTest.cpp
tags/LRE-1.2.1/: GETTING_STARTED.txt  README.txt
tags/LRE-1.2.1/data/: doc_with_errors3.csv.in2
tags/LRE-1.2.1/src/lre/: ArgumentParser.cpp  FileUtils.cpp  Notify.cpp  Notify.h
test/src/lre/: CMakeLists.txt  CommandLineTest.cpp  ComponentTest.cpp  FileIOTest.cpp  FileUtilsTest.cpp  RunTest.cpp  SetTest.cpp  unitTest_main.cpp
tests/lre/: CMakeLists.txt
trunk/: CMakeLists.txt  README.txt
trunk/CMakeModules/: FindGTest.cmake  ModuleInstall.cmake
trunk/applications/lre/: CMakeLists.txt
trunk/data/: CMakeLists.txt  doc_with_errors1.csv.in2
trunk/data/data-multifile/: CMakeLists.txt
trunk/examples/: CMakeLists.txt
trunk/examples/example_lre/: CMakeLists.txt
trunk/examples/lreExternalData/: CMakeLists.txt  main.cpp
trunk/examples/lreInternalData/: CMakeLists.txt  main.cpp
trunk/src/lre/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Component.cpp  Component.h  Export.h  FileUtil.cpp  FileUtils.cpp  FileUtils.h  Notify.cpp  Notify.h  ReplaceEngine.cpp  ReplaceEngine.h  Set.cpp  Settings.cpp  Settings.h
trunk/test/src/lre/: CMakeLists.txt  CommandLineTest.cpp  ComponentTest.cpp  FileIOTest.cpp  FileUtilsTest.cpp  LRETest.cpp  SetTest.cpp
trunk/tests/lre/: LRETest.cpp  unitTest_main.cpp
