# LRE Example Application
SET(TARGET_TARGETNAME
    lre
)
SET(LIB_NAME
	${TARGET_TARGETNAME}
	)

SET(TARGET_SRC
    main.cpp
    )
    
SET(TARGET_H
#	none
    )

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})

TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}
	libLRE
)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Application ${TARGET_TARGETNAME}")

INCLUDE(ModuleInstall OPTIONAL)
