SET(TARGET_TARGETNAME
	test_lre
)

SET(TARGET_SRC
    unitTest_main.cpp
    LRETest.cpp
)

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})

TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}
	gtest
	LRE
)

add_test(
	NAME ${TARGET_TARGETNAME}
	COMMAND ${TARGET_TARGETNAME}
)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Test ${TARGET_TARGETNAME}")

IF(LRE_INSTALL_TESTS)
	INSTALL(TARGETS ${TARGET_TARGETNAME} RUNTIME DESTINATION ${LRE_TESTS_INSTALLDIR} )
ENDIF(LRE_INSTALL_TESTS)
