# LRE Example Application
SET(TARGET_TARGETNAME
    lreInternalData
)

SET(TARGET_SRC
    main.cpp
    )
    
SET(TARGET_H
#	none
    )

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})

TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}
	LRE
)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Example ${TARGET_TARGETNAME}")

IF(LRE_INSTALL_TESTS)
	INSTALL(TARGETS ${TARGET_TARGETNAME} RUNTIME DESTINATION ${LRE_SHARE_INSTALLDIR} )
ENDIF(LRE_INSTALL_TESTS)
