IF(NOT BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DSTATIC_LRE_LIBRARIES)
ENDIF(NOT BUILD_SHARED_LIBS)

# LRE Example Application
SET(TARGET_TARGETNAME
    lre
)
SET(LIB_NAME
	${TARGET_TARGETNAME}
	)

SET(TARGET_SRC
    main.cpp
    )
    
SET(TARGET_H
#	none
    )

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})

TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}
	libLRE
)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Application ${TARGET_TARGETNAME}")
SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_TARGETNAME}${CMAKE_DEBUG_POSTFIX}")

INCLUDE(ModuleInstall OPTIONAL)
