IF(NOT LRE_BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DSTATIC_LRE_LIBRARIES)
ENDIF(NOT LRE_BUILD_SHARED_LIBS)

# LRE Example Application
SET(TARGET_TARGETNAME
    lreExternalData
)

SET(TARGET_SRC
    main.cpp
    )
    
SET(TARGET_H
#	none
    )

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})

TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}
	libLRE
)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Example ${TARGET_TARGETNAME}")
SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_TARGETNAME}${CMAKE_DEBUG_POSTFIX}")

IF(LRE_INSTALL_TESTS)
	INSTALL(TARGETS ${TARGET_TARGETNAME} RUNTIME DESTINATION ${LRE_SHARE_INSTALLDIR_BIN} )
ENDIF(LRE_INSTALL_TESTS)
