IF(NOT BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DSTATIC_LRE_LIBRARIES)
ENDIF(NOT BUILD_SHARED_LIBS)

SET(TARGET_TARGETNAME
	test_lre
)

SET(TARGET_SRC
    unitTest_main.cpp
    LRETest.cpp
)

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})

TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME}
	gtest
	libLRE
)

add_test(
	NAME ${TARGET_TARGETNAME}
	COMMAND ${TARGET_TARGETNAME}
)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Test ${TARGET_TARGETNAME}")
SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES DEBUG_OUTPUT_NAME "${TARGET_TARGETNAME}${CMAKE_DEBUG_POSTFIX}")

IF(LRE_INSTALL_TESTS)
	INSTALL(TARGETS ${TARGET_TARGETNAME} RUNTIME DESTINATION ${LRE_SHARE_INSTALLDIR} )
ENDIF(LRE_INSTALL_TESTS)
